# adobe-cc

./: .gitmodules  CMakeLists.txt  README.md  license.txt
installer/: CMakeLists.txt  Welcome.txt  postinstall.in
source/: CMakeLists.txt
source/codec_registration/: CMakeLists.txt  codec_registration.hpp  config.cpp  config.hpp  config.mm  logging.cpp  logging.hpp  platform_paths.cpp  platform_paths.hpp  platform_paths_mac.mm  platform_paths_windows.cpp  util.cpp
source/plugin/: CMakeLists.txt
source/plugin/after_effects/: CMakeLists.txt  output_module.cpp  output_module.r  ui.h
source/plugin/after_effects/mac/: ui.mm
source/plugin/after_effects/win/: output_module.rc  resource.h  ui.cpp
source/plugin/premiere/: CMakeLists.txt  async_importer.cpp  export_settings.hpp  main.cpp  premiereImporter.cpp  premiereParams.cpp  presets.cpp  presets.hpp  presets.mm
source/session/: CMakeLists.txt  exporter.cpp  exporter.hpp  ffmpeg_helpers.cpp  ffmpeg_helpers.hpp  freelist.hpp  importer.cpp  importer.hpp  movie_reader.cpp  movie_reader.hpp  movie_writer.cpp  movie_writer.hpp
source/test/: CMakeLists.txt  movie_test.cpp
